hphp/hack/test/typecheck/reactive/at_most_rx_as_args1.php
<?hh // strict

// ERROR
<<__AtMostRxAsArgs>>
function f((function(): int) $s): void {
}
